# dl4ds_fixed

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_win.txt  setup.py
.github/workflows/: ci.yml  docker-image.yml
notebooks/: DL4DS_tutorial.ipynb  DL4DS_tutorial.py
set_env/: README.md  environment.yml  requirements.txt
tests/: DL4DS_test.py
